src/tests/errors/functions/002.ura
// errors/functions/002 — calling an undefined function
use "@/header"

main():
    do_something(1, 2)
